
[- New: resolution_authority/provider_notification_section (TS 102 323)]
 - New: content_identifier_descriptor (TS 102 323)
 - New: TVA_id_descriptor (TS 102 323)
 - New: related_content_descriptor (TS 102 323)
 - New: default_authority_descriptor (TS 102 323)
 - New: ECM_repetition_rate_descriptor (EN 301 192 v1.4.1)
 - New: time_slice_fec_identifier_descriptor (EN 301 192 v1.4.1)
 - New: Section MPE_FEC  EN 301 192 v1.4.1
 - Bugfixes

 - Bugfixes
 - New: TS filter single pids from multi-pid ts-input-file  (e.g.: -if file 0x10)
 - Changed: PMT: some brainded section check
 - NEW: TS subdecoding (ts2PES, ts2SEC)  [-tssubdecode]

   release: 1.3.0
 - Changed: Cmd options -TIMEOUT and -HCP to -timeout and -hideproginfo
 - NEW: spider PIDs (currently sections only)
 - NEW: FrontEnd current parameter
 - NEW: FrontEnd info
 - New: WSS detail decoding  (EBU data)
 - New: VPS detail decoding  (EBU data)
 - New: DSM-CC: more info on DII and DSI protocol
 - Bugfixes...

 - New: DSM-CC:  DSI, DII, DDB, ...
 - New: AIT descriptors
 - New: MHP AIT section
 - Changed: Option -nph behavior changed
 - New: EBU teletext, VPS, WSS
 - Bugfix:  PTS decode
 - Changed: Output data (get rid of \r)
 - New: Pidscan  packet content hint
 - BugFix: PES private_stream_1 
 - Changed:  -sync now default option (was: -nosync)
 - New: SECTION timeout
 - New: PES pack_header
 - New: DSM-CC stream descriptors
 - New: PES stream directory
 - Restructured: PES decoding
 - New:  show packet content hint on TS sniffing
 - BugFix:  getbits overflow (in some cases)
 - 

 ...